# airline-passenger-satisfaction

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Airline_Passenger_Satisfaction_v1.ipynb  Airline_Passenger_Satisfaction_v2.ipynb
